--- a/org.eclipse.ui.intro.universal/themes/circles/html/firststeps.css
+++ b/org.eclipse.ui.intro.universal/themes/circles/html/firststeps.css
@@ -10,7 +10,10 @@
  *******************************************************************************/
 
 /* show the "selected" image for this page */
-#navigation-links a#firststeps img, #navigation-links a#firststeps:hover img { 
+#navigation-links a#firststeps img, 
+#navigation-links a#firststeps:hover img,
+#navigation-links a#firststeps:focus img,
+#navigation-links a#firststeps:active img {
 	background-image : url(../graphics/icons/ctool/fs_nav_64.gif); 
 	top : 2px;
 	left : -3px;
