--- a/org.eclipse.ui.intro.universal/themes/circles/html/tutorials.css
+++ b/org.eclipse.ui.intro.universal/themes/circles/html/tutorials.css
@@ -10,7 +10,10 @@
  *******************************************************************************/
 
 /* show the "selected" image for this page */
-#navigation-links a#tutorials img, #navigation-links a#tutorials:hover img { 
+#navigation-links a#tutorials img, 
+#navigation-links a#tutorials:hover img,
+#navigation-links a#tutorials:focus img,
+#navigation-links a#tutorials:active img {
 	background-image : url(../graphics/icons/ctool/tu_nav_64.gif); 
 	top : 2px; 
 	left : -3px;
