--- a/org.eclipse.ui.intro.universal/themes/circles/html/whatsnew.css
+++ b/org.eclipse.ui.intro.universal/themes/circles/html/whatsnew.css
@@ -10,7 +10,10 @@
  *******************************************************************************/
 
 /* show the "selected" image for this page */
-#navigation-links a#whatsnew img, #navigation-links a#whatsnew:hover img { 
+#navigation-links a#whatsnew img, 
+#navigation-links a#whatsnew:hover img,
+#navigation-links a#whatsnew:focus img,
+#navigation-links a#whatsnew:active img {
 	background-image : url(../graphics/icons/ctool/wn_nav_64.gif); 
 	top : 2px; 
 	left : -3px;
