--- a/org.eclipse.ui.intro.universal/themes/purpleMesh/html/migrate.css
+++ b/org.eclipse.ui.intro.universal/themes/purpleMesh/html/migrate.css
@@ -14,6 +14,9 @@ body {
 }
 
 /* show the "selected" image for this page */
-#navigation-links a#migrate img, #navigation-links a#migrate:hover img { 
+#navigation-links a#migrate img, 
+#navigation-links a#migrate:hover img,
+#navigation-links a#migrate:focus img,
+#navigation-links a#migrate:active img {
 	background-image : url(../graphics/icons/ctool/migrate48sel.gif); 
 }
