--- a/org.eclipse.ui.intro.universal/themes/purpleMesh/html/webresources.css
+++ b/org.eclipse.ui.intro.universal/themes/purpleMesh/html/webresources.css
@@ -14,6 +14,9 @@ body {
 }
 
 /* show the "selected" image for this page */
-#navigation-links a#webresources img, #navigation-links a#webresources:hover img { 
+#navigation-links a#webresources img, 
+#navigation-links a#webresources:hover img,
+#navigation-links a#webresources:focus img,
+#navigation-links a#webresources:active img {
 	background-image : url(../graphics/icons/ctool/webrsrc48sel.gif); 
 }
